infra/k8s/client-depl.yaml
# Event Bus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: client
  selector:
    matchLabels:
      app: client
  # create pods and give them the label app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: wjn1/client
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
          ports:
            - containerPort: 3000
---
# Event Bus ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
