infra/k8s/comments-depl.yaml
# Event Bus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: comments
  selector:
    matchLabels:
      app: comments
  # create pods and give them the label app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: wjn1/comments:0.0.3
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4001
---
# Event Bus ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
