infra/k8s/moderation-depl.yaml
# Event Bus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: moderation
  selector:
    matchLabels:
      app: moderation
  # create pods and give them the label app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: wjn1/moderation:0.0.1
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4003
---
# Event Bus ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
