infra/k8s/query-depl.yaml
# Event Bus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: query
  selector:
    matchLabels:
      app: query
  # create pods and give them the label app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: wjn1/query:0.0.1
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4002
---
# Event Bus ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
